--- a/css/style.css
+++ b/css/style.css
@@ -158,11 +158,12 @@ ul, ol { list-style-type: none;}
 
 #main_footer > #footer_logo{
     float: left;
-    margin-left: 100px;
+    /* margin-left: 100px; */
+    margin-top: 61px;
 }
-#main_footer > #footer_logo > img{
+/* #main_footer > #footer_logo > img{
     margin-top: 50%;
-}
+} */
 
 #main_footer > #footer_info{
     float: left;
@@ -193,6 +194,6 @@ ul, ol { list-style-type: none;}
 }
 #main_footer > #sns_icon{
     float: right;
-    margin-right: 100px;
-    margin-top: 20px;
+    /* margin-right: 100px; */
+    margin-top: 61px;
 }
