--- a/css/style1.css
+++ b/css/style1.css
@@ -570,11 +570,12 @@ table{
 
 #main_footer > #footer_logo{
     float: left;
-    margin-left: 100px;
+    /* margin-left: 100px; */
+    margin-top: 61px;
 }
-#main_footer > #footer_logo > img{
+/* #main_footer > #footer_logo > img{
     margin-top: 50%;
-}
+} */
 
 #main_footer > #footer_info{
     float: left;
@@ -605,6 +606,6 @@ table{
 }
 #main_footer > #sns_icon{
     float: right;
-    margin-right: 100px;
-    margin-top: 20px;
+    /* margin-right: 100px; */
+    margin-top: 61px;
 }
