--- a/css/index_style.css
+++ b/css/index_style.css
@@ -53,7 +53,7 @@ body {
 #lnb > ul > li > a > img {
     vertical-align: middle;
 }
-#lnb > ul > li > a:first-child {
+#lnb > ul > li:first-child > a {
     margin-right: 20px;
 }
 
