--- a/css/index_style.css
+++ b/css/index_style.css
@@ -39,6 +39,7 @@ body {
 }
 #lnb > ul > li {
     display: inline-block;
+    /* outline: 1px solid red; */
 }
 #lnb > ul > li > a{
     height: 30px;
@@ -163,6 +164,7 @@ body {
     text-indent: -9999px;
     background: rgba(237, 228, 223, 1);
     transition-duration: 0.4s;
+    box-shadow: 0px 3px 2px rgba(0,0,0,0.2);
     /* outline: 1px solid red; */
 }
 #gnb_bg.show_menu{
