--- a/css/style1.css
+++ b/css/style1.css
@@ -1,4 +1,4 @@
-/* 색상 정보
+﻿/* 색상 정보
 
 메인(로고글씨) : #3a466a
 
@@ -28,6 +28,7 @@ ul, ol { list-style-type: none;}
     height: 150px;
     background: #0093a2;
     margin: 0 auto;
+    margin-bottom: 10px;
 }
 
 #navigation > h2{
@@ -73,7 +74,7 @@ ul, ol { list-style-type: none;}
 
 
 .tabWrap{
-    padding-top: 40px;
+    padding-top: 30px;
     text-align: center;
 }
 
@@ -608,4 +609,8 @@ table{
     float: right;
     /* margin-right: 100px; */
     margin-top: 61px;
+}
+#sns_icon a:nth-child(2){
+    margin-left: 10px;
+    margin-right: 10px;
 }
